--- a/kings.css
+++ b/kings.css
@@ -1,6 +1,9 @@
-<style>
-	
-	p {
-		font-size: 18px;
-	}
-</style	
+body {
+  background-color: powderblue;
+}
+h1 {
+  color: blue;
+}
+p {
+  color: red;
+}
