--- a/kings.css
+++ b/kings.css
@@ -7,7 +7,7 @@ h1 {
   font-family: Arial, Helvetica, sans-serif;
 }
 img{
-	  border: 5px solid #555;
+	  border: 5px solid #8a2be2;
 	  margin-left: 50px 
 }
 p {
